# Image-Filter

./: .gitignore  CMakeLists.txt  README.md  dataLoader.cpp  main.cpp
include/: dataLoader.h  filters.h  image.h
src/: CMakeLists.txt  dataLoader.cpp  filters.cpp  image.cpp  main.cpp
src/dataloader/: dataLoader.cpp  dataLoader.h
src/filters/: filters.cpp  filters.h
